fix: solve issue where sidebar backdrop covers the sidebar itself

--- a/packages/react-components/SideMenu/index.module.css
+++ b/packages/react-components/SideMenu/index.module.css
@@ -67,7 +67,6 @@
   /* Shows the side menu  when on a big screen */
   @media screen and (width >1024px) {
     left: 0;
-    z-index: auto !important;
   }
 
   /* Shows the side menu when opened on a small screen */
